add list user operation
