# api/v1/server/restapi/users/list_users_responses.go
@@ -13,6 +13,53 @@ import (
 	"github.com/grepplabs/tribe/api/v1/models"
 )
 
+// ListUsersFoundUsersCode is the HTTP code returned for type ListUsersFoundUsers
+const ListUsersFoundUsersCode int = 200
+
+/*ListUsersFoundUsers found
+
+swagger:response listUsersFoundUsers
+*/
+type ListUsersFoundUsers struct {
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.GetUserResponse `json:"body,omitempty"`
+}
+
+// NewListUsersFoundUsers creates ListUsersFoundUsers with default headers values
+func NewListUsersFoundUsers() *ListUsersFoundUsers {
+
+	return &ListUsersFoundUsers{}
+}
+
+// WithPayload adds the payload to the list users found users response
+func (o *ListUsersFoundUsers) WithPayload(payload []*models.GetUserResponse) *ListUsersFoundUsers {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the list users found users response
+func (o *ListUsersFoundUsers) SetPayload(payload []*models.GetUserResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ListUsersFoundUsers) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = make([]*models.GetUserResponse, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
 // ListUsersBadRequestCode is the HTTP code returned for type ListUsersBadRequest
 const ListUsersBadRequestCode int = 400
 
